--- a/functions/package.json
+++ b/functions/package.json
@@ -9,9 +9,12 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "algoliasearch": "^3.24.9",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
+    "dotenv": "^4.0.0",
     "express": "^4.14.1",
+    "firebase": "^4.9.0",
     "firebase-admin": "~5.4.2",
     "firebase-functions": "^0.8.1",
     "moment": "^2.19.2"
