--- a/functions/package.json
+++ b/functions/package.json
@@ -15,8 +15,8 @@
     "dotenv": "^4.0.0",
     "express": "^4.14.1",
     "firebase": "^4.9.0",
-    "firebase-admin": "~5.4.2",
-    "firebase-functions": "^0.8.1",
+    "firebase-admin": "^5.12.0",
+    "firebase-functions": "^1.0.1",
     "moment": "^2.19.2"
   },
   "private": true
